# piano-led-controller

./: .gitignore  Cargo.toml  LICENSE  README.md  notes_config_all.json  notes_config_safe.json  notes_config_test.json
src/: config.rs  led.rs  main.rs  note.rs
