[package]
name = "piano-lights"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
midir = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs_ws281x = { git = "https://github.com/rpi-ws281x/rpi-ws281x-rust.git" }
log = "0.4"
env_logger = "0.9"

[build]
rustflags = ["-L", "/usr/lib"]
